--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     
                     <input type="hidden" name="_subject" value="Pesan Baru dari Portofolio Web!">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/index.html"> 
+                    <input type="hidden" name="_next" value="https://abdlroup14.github.io/"> 
                     <div class="form-group">
                         <label for="name">Nama</label>
                         <input type="text" id="name" name="name" placeholder="Nama Anda" required>
@@ -264,4 +264,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
