--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+l<!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
 
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="#home" class="logo">Roup<span>.</span>Dev</a>
+            <a href="#home" class="logo">Bedul<span>.</span>Dev</a>
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -266,3 +266,4 @@
 </body>
 
 </html>
+
