--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@ l<!DOCTYPE html>
                     </div>
                 </div>
 
-                <a href="https://distribusi.setiagama.sch.id/" target="_blank" class="project-card reveal-up" style="transition-delay: 0.2s; text-decoration: none;">
+                <!-- <a href="https://distribusi.setiagama.sch.id/" target="_blank" class="project-card reveal-up" style="transition-delay: 0.2s; text-decoration: none;"> -->
+                <div class="projects-grid">
                     <div class="card-image-wrapper">
                          <img src="img/projek/distribusi.png" alt="Aplikasi Logistik">
                          <div class="card-overlay" style="text-decoration: none;">
@@ -128,7 +129,8 @@ l<!DOCTYPE html>
                         <p class="tech-stack">Laravel • jQuery • JavaScript</p>
                         <p class="project-desc">Aplikasi manajemen stok gudang, tracking pengiriman barang, dan faktur digital untuk perusahaan.</p>
                     </div>
-                </a>
+                </div>
+                <!-- </a> -->
 
                 <div class="project-card reveal-up" style="transition-delay: 0.4s;">
                     <div class="card-image-wrapper">
@@ -266,4 +268,5 @@ l<!DOCTYPE html>
 </body>
 
 </html>
+
 
