--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ l<!DOCTYPE html>
                 <div class="projects-grid">
                     <div class="card-image-wrapper">
                          <img src="img/projek/distribusi.png" alt="Aplikasi Logistik">
-                         <div class="card-overlay" style="text-decoration: none;">
-                            <span style="text-decoration: none; color: #fff;">Manajemen Bisnis</span>
+                         <div class="card-overlay">
+                            <span>Manajemen Bisnis</span>
                         </div>
                     </div>
                     <div class="card-content">
@@ -268,5 +268,6 @@ l<!DOCTYPE html>
 </body>
 
 </html>
+
 
 
