--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@ l<!DOCTYPE html>
                     </div>
                 </div>
 
-                <!-- <a href="https://distribusi.setiagama.sch.id/" target="_blank" class="project-card reveal-up" style="transition-delay: 0.2s; text-decoration: none;"> -->
-                <div class="projects-card reveal-up" style="transition-delay: 0.2s;">
+                <div class="project-card reveal-up" style="transition-delay: 0.2s;">
                     <div class="card-image-wrapper">
                          <img src="img/projek/distribusi.png" alt="Aplikasi Logistik">
                          <div class="card-overlay">
@@ -126,11 +125,10 @@ l<!DOCTYPE html>
                     </div>
                     <div class="card-content">
                         <h3>Sistem Distribusi & Logistik</h3>
-                        <p class="tech-stack">Laravel • jQuery • JavaScript</p>
+                        <p class="tech-stack">Laravel • Livewire • API</p>
                         <p class="project-desc">Aplikasi manajemen stok gudang, tracking pengiriman barang, dan faktur digital untuk perusahaan.</p>
                     </div>
                 </div>
-                <!-- </a> -->
 
                 <div class="project-card reveal-up" style="transition-delay: 0.4s;">
                     <div class="card-image-wrapper">
@@ -268,6 +266,7 @@ l<!DOCTYPE html>
 </body>
 
 </html>
+
 
 
 
