--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ l<!DOCTYPE html>
         </div>
     </section>
 
-    <section id="projects" class="section">
+     <section id="projects" class="section">
         <div class="container">
             <h2 class="section-title text-center">Portofolio Proyek</h2>
             <p class="section-subtitle text-center">Aplikasi nyata yang telah saya bangun dan implementasikan.</p>
@@ -104,21 +104,21 @@ l<!DOCTYPE html>
             <div class="projects-grid">
                 <div class="project-card reveal-up">
                     <div class="card-image-wrapper">
-                        <img src="img/projek/absensiswa.png" alt="Aplikasi Absensi"> 
+                        <img src="https://source.unsplash.com/random/800x600/?code,screen" alt="Aplikasi Absensi"> 
                         <div class="card-overlay">
                             <span>Sistem Manajemen Sekolah</span>
                         </div>
                     </div>
                     <div class="card-content">
                         <h3>Aplikasi Absensi & SPP</h3>
-                        <p class="tech-stack">PHP Native • MySQL • API</p>
+                        <p class="tech-stack">PHP Native • MySQL • Bootstrap</p>
                         <p class="project-desc">Sistem absensi digital (QR/RFID) terintegrasi dengan pembayaran SPP dan laporan otomatis untuk SMK.</p>
                     </div>
                 </div>
 
                 <div class="project-card reveal-up" style="transition-delay: 0.2s;">
                     <div class="card-image-wrapper">
-                         <img src="img/projek/distribusi.png" alt="Aplikasi Logistik">
+                         <img src="https://source.unsplash.com/random/800x600/?logistics,warehouse" alt="Aplikasi Logistik">
                          <div class="card-overlay">
                             <span>Manajemen Bisnis</span>
                         </div>
@@ -132,7 +132,7 @@ l<!DOCTYPE html>
 
                 <div class="project-card reveal-up" style="transition-delay: 0.4s;">
                     <div class="card-image-wrapper">
-                         <img src="img/projek/smartcar.png" alt="Proyek IoT">
+                         <img src="https://source.unsplash.com/random/800x600/?robotics,arduino" alt="Proyek IoT">
                          <div class="card-overlay">
                             <span>Hardware & IoT</span>
                         </div>
@@ -146,7 +146,7 @@ l<!DOCTYPE html>
 
                 <div class="project-card reveal-up" style="transition-delay: 0.6s;">
                     <div class="card-image-wrapper">
-                         <img src="img/projek/Computer Vision Presence.png" alt="Face Recognition">
+                         <img src="https://source.unsplash.com/random/800x600/?face,ai" alt="Face Recognition">
                          <div class="card-overlay">
                             <span>Artificial Intelligence</span>
                         </div>
@@ -266,6 +266,7 @@ l<!DOCTYPE html>
 </body>
 
 </html>
+
 
 
 
