--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ l<!DOCTYPE html>
             <div class="projects-grid">
                 <div class="project-card reveal-up">
                     <div class="card-image-wrapper">
-                        <img src="https://source.unsplash.com/random/800x600/?code,screen" alt="Aplikasi Absensi"> 
+                        <img src="img/projek/absensiswa.png" alt="Aplikasi Absensi"> 
                         <div class="card-overlay">
                             <span>Sistem Manajemen Sekolah</span>
                         </div>
@@ -118,7 +118,7 @@ l<!DOCTYPE html>
 
                 <div class="project-card reveal-up" style="transition-delay: 0.2s;">
                     <div class="card-image-wrapper">
-                         <img src="https://source.unsplash.com/random/800x600/?logistics,warehouse" alt="Aplikasi Logistik">
+                         <img src="img/projek/distribusi.png" alt="Aplikasi Logistik">
                          <div class="card-overlay">
                             <span>Manajemen Bisnis</span>
                         </div>
@@ -132,7 +132,7 @@ l<!DOCTYPE html>
 
                 <div class="project-card reveal-up" style="transition-delay: 0.4s;">
                     <div class="card-image-wrapper">
-                         <img src="https://source.unsplash.com/random/800x600/?robotics,arduino" alt="Proyek IoT">
+                         <img src="img/projek/smartcar.png" alt="Proyek IoT">
                          <div class="card-overlay">
                             <span>Hardware & IoT</span>
                         </div>
@@ -146,7 +146,7 @@ l<!DOCTYPE html>
 
                 <div class="project-card reveal-up" style="transition-delay: 0.6s;">
                     <div class="card-image-wrapper">
-                         <img src="https://source.unsplash.com/random/800x600/?face,ai" alt="Face Recognition">
+                         <img src="img/projek/Computer Vision Presence.png" alt="Face Recognition">
                          <div class="card-overlay">
                             <span>Artificial Intelligence</span>
                         </div>
@@ -266,6 +266,7 @@ l<!DOCTYPE html>
 </body>
 
 </html>
+
 
 
 
