--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-l<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@ l<!DOCTYPE html>
 
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="#home" class="logo">Bedul<span>.</span>Dev</a>
+            <a href="#home" class="logo">Roup<span>.</span>Dev</a>
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -51,7 +51,7 @@ l<!DOCTYPE html>
             </div>
             <div class="about-text reveal-right">
                 <h2 class="section-title">Tentang Saya</h2>
-                <p class="lead">Mahasiswa Teknik Elektro UBSI.</p>
+                <p class="lead">Lulusan SMK Setia Gama & Mahasiswa Teknik Elektro UBSI.</p>
                 <p>
                     Saya memiliki minat besar dalam teknologi informasi dan otomasi. Sejak sekolah, saya aktif mengembangkan aplikasi <i>real-case</i> yang digunakan oleh institusi pendidikan dan bisnis. 
                     Saya menggabungkan kedisiplinan, solusi sistematis, dan keinginan untuk terus belajar teknologi baru.
@@ -96,7 +96,7 @@ l<!DOCTYPE html>
         </div>
     </section>
 
-     <section id="projects" class="section">
+    <section id="projects" class="section">
         <div class="container">
             <h2 class="section-title text-center">Portofolio Proyek</h2>
             <p class="section-subtitle text-center">Aplikasi nyata yang telah saya bangun dan implementasikan.</p>
@@ -222,7 +222,7 @@ l<!DOCTYPE html>
     
                     <input type="hidden" name="_subject" value="Pesan Baru dari Portofolio Web!">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="https://abdlroup14.github.io/"> 
+                    <input type="hidden" name="_next" value="file:///c%3A/laragon/www/portofolio/index.html?name=Abdul&email=ishida.shoya14%40gmail.com&message=woe#contact"> 
                     <div class="form-group">
                         <label for="name">Nama</label>
                         <input type="text" id="name" name="name" placeholder="Nama Anda" required>
@@ -264,15 +264,4 @@ l<!DOCTYPE html>
 
     <script src="script.js"></script>
 </body>
-
 </html>
-
-
-
-
-
-
-
-
-
-
