--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="#home" class="logo">Roup<span>.</span>Dev</a>
+            <a href="#home" class="logo">Roup1<span>.</span>Dev</a>
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -265,3 +265,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
