--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="#home" class="logo">Roup1<span>.</span>Dev</a>
+            <a href="#home" class="logo">Roup<span>.</span>Dev</a>
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -62,7 +62,7 @@
                     <div class="skill-item"><i class="fab fa-laravel"></i> Laravel/PHP</div>
                     <div class="skill-item"><i class="fas fa-microchip"></i> IoT (ESP32)</div>
                     <div class="skill-item"><i class="fab fa-js"></i> JavaScript</div>
-                    <div class="skill-item"><i class="fab fa-python"></i> Python AI</div>
+                    <div class="skill-item"><i class="fab fa-python"></i> Python</div>
                     <div class="skill-item"><i class="fas fa-database"></i> MySQL</div>
                     <div class="skill-item"><i class="fab fa-bootstrap"></i> Bootstrap</div>
                 </div>
@@ -111,7 +111,7 @@
                     </div>
                     <div class="card-content">
                         <h3>Aplikasi Absensi & SPP</h3>
-                        <p class="tech-stack">PHP Native • MySQL • Bootstrap</p>
+                        <p class="tech-stack">PHP Native • MySQL • API</p>
                         <p class="project-desc">Sistem absensi digital (QR/RFID) terintegrasi dengan pembayaran SPP dan laporan otomatis untuk SMK.</p>
                     </div>
                 </div>
@@ -125,8 +125,8 @@
                     </div>
                     <div class="card-content">
                         <h3>Sistem Distribusi & Logistik</h3>
-                        <p class="tech-stack">Laravel • Livewire • API</p>
-                        <p class="project-desc">Aplikasi manajemen stok gudang, tracking pengiriman barang, dan faktur digital untuk perusahaan.</p>
+                        <p class="tech-stack">Laravel • JQuery • Javascript</p>
+                        <p class="project-desc">Aplikasi manajemen stok gudang, monitoring laba, dan faktur digital untuk perusahaan.</p>
                     </div>
                 </div>
 
@@ -154,7 +154,7 @@
                     <div class="card-content">
                         <h3>Computer Vision Presence</h3>
                         <p class="tech-stack">Python • OpenCV</p>
-                        <p class="project-desc">Sistem deteksi wajah untuk absensi atau keamanan, menggunakan library OpenCV.</p>
+                        <p class="project-desc">Sistem deteksi wajah, menggunakan library OpenCV.</p>
                     </div>
                 </div>
             </div>
@@ -175,7 +175,7 @@
                 <div class="teaching-card reveal-up">
                     <div class="icon-box"><i class="fas fa-wifi"></i></div>
                     <h3>IoT Dasar</h3>
-                    <p>Memperkenalkan mikrokontroler (Arduino/ESP8266) dan logika dasar sensor serta aktuator.</p>
+                    <p>Memperkenalkan mikrokontroler (Arduino/ESP32) dan logika dasar sensor serta aktuator.</p>
                 </div>
                 <div class="teaching-card reveal-up">
                     <div class="icon-box"><i class="fas fa-brain"></i></div>
@@ -211,8 +211,8 @@
                         <span>Jakarta, Indonesia</span>
                     </div>
                     <div class="social-links-big">
-                        <a href="#" title="LinkedIn" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.instagram.com/abdl.roup/" title="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://github.com/abdlroup14/" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="mailto:abdl.roup14@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
@@ -222,7 +222,7 @@
     
                     <input type="hidden" name="_subject" value="Pesan Baru dari Portofolio Web!">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="file:///c%3A/laragon/www/portofolio/index.html?name=Abdul&email=ishida.shoya14%40gmail.com&message=woe#contact"> 
+                    <input type="hidden" name="_next" value="https://abdlroup14.github.io/"> 
                     <div class="form-group">
                         <label for="name">Nama</label>
                         <input type="text" id="name" name="name" placeholder="Nama Anda" required>
@@ -265,4 +265,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
