--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
                 "Menjadi Software Engineer yang membangun sistem digital berdampak positif bagi pendidikan dan bisnis. Terus Berinovasi."
             </p>
             <div class="social-links-footer">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="https://www.instagram.com/abdl.roup/"><i class="fab fa-instagram"></i></a>
+                <a href="https://github.com/abdlroup14/"><i class="fab fa-github"></i></a>
                 <a href="#"><i class="fas fa-envelope"></i></a>
             </div>
             <p class="copyright">&copy; 2024 Abdul Roup.</p>
@@ -265,5 +265,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
