--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section id="about" class="section">
         <div class="container about-container">
             <div class="about-img reveal-left">
-                <img src="profil.png" alt="Abdul Roup">
+                <img src="profile.png" alt="Abdul Roup">
             </div>
             <div class="about-text reveal-right">
                 <h2 class="section-title">Tentang Saya</h2>
@@ -265,6 +265,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
